<resources>
    <string name="app_name">Islamic Story</string>
    <string name="sign_in">Sign-In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="or">OR</string>
    <string name="islamic">Islamic</string>
    <string name="story">Story</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="regsiter_here">Regsiter Here</string>
    <string name="nama">Nama</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="close">Close</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="default_text">-</string>
    <string name="image_empty">Image Empty</string>
    <string name="image_item">Image Item</string>
    <string name="tempat_diutus">Diutus Kepada : </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dapibus tristique nunc, eu blandit diam euismod a. Ut gravida odio at imperdiet interdum. Nulla facilisi. Quisque vestibulum odio id ipsum suscipit, eu varius nulla viverra. In quis ex dignissim, tempus dui viverra, aliquet neque. Pellentesque iaculis felis massa, id porttitor justo scelerisque sit amet. In hac habitasse platea dictumst. Nullam magna est, mollis quis erat nec, ultricies condimentum justo. Phasellus efficitur neque quis quam vehicula euismod. Aenean fermentum ultricies felis, eu feugiat diam scelerisque pharetra. Nunc id pretium urna, ut gravida justo. Mauris vulputate orci nec congue accumsan. Donec vel arcu est. Quisque rutrum vel eros id rhoncus. Duis gravida aliquam elit, sit amet sodales ante tristique sit amet. Suspendisse sodales facilisis nisl ut tempor.</string>
    <string name="image_profile">Image Profile</string>
    <string name="input_data">Input Data</string>
    <string name="umur">Umur : </string>
    <string name="kisah">Kisah</string>
    <string name="upload">Upload</string>
    <string name="link_gambar">Link Gambar</string>
    <string name="link_display">Link Display</string>
    <string name="fab_upload">Fab Upload</string>
    <string name="image_detail">Image_detail</string>
    <string name="user">User</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="image_user">Image User</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="keyid">KeyId</string>
    <string name="profile">Profile</string>
    <string name="upload_display">Display</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="update">Update</string>
    <string name="delete_data">Delete Data</string>
    <string name="search">Search</string>
    <string name="kisah_nabi_dan_rasul">25 Nabi Dan Rasul</string>
    <string name="recent_activity">Reading List</string>
    <string name="clear_all">Clear All</string>
    <string name="image_nabi_dan_rasul">Image Nabi Dan Rasul</string>
    <string name="shirah_nabawiyah">Shirah Nabawiyah</string>
    <string name="recommended_stories">Recommended Stories</string>
    <string name="see_more">See More</string>
    <string name="khulafaur_rasyidin">Khulafaur Rasyidin</string>
    <string name="icon_all_stories">Icon All Stories</string>
    <string name="all_stories">All Stories</string>
    <string name="dinasti_umayah">Dinasti Umayah</string>
    <string name="dinasti_abbasiyah">Dinasti Abbasiyah</string>
    <string name="dinasti_idrisiyah">Dinasti Idrisiyah</string>
    <string name="dinasti_aglabiyah">Dinasti Aglabiyah</string>
    <string name="dinasti_samaniyah">Dinasti Samaniyah</string>
    <string name="dinasti_safariyah">Dinasti Safariyah</string>
    <string name="dinasti_tulun">Dinasti Tulun</string>
    <string name="dinasti_hamdaniyah">Dinasti Hamdaniyah</string>
    <string name="dinasti_fatimiyah">Dinasti Fatimiyah</string>
    <string name="dinasti_buwaihi">Dinasti Buwaihi</string>
    <string name="dinasti_seljuk">Dinasti Seljuk</string>
    <string name="dinasti_ayubiyah">Dinasti Ayubiyah</string>
    <string name="dinasti_delhi">Dinasti Delhi</string>
    <string name="dinasti_mamluk">Dinasti Mamluk</string>
    <string name="dinasti_mughal">Dinasti Mughal</string>
    <string name="dinasti_usmani">Dinasti Usmani</string>
    <string name="nabi_dan_rasul">Nabi dan Rasul</string>
    <string name="reset_link_hasbeen_sent">Reset Password Link has been sent, please check your inbox</string>
    <string name="_63_tahun">63 Tahun</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="admin">auriwanyasper@gmail.com</string>
    <string name="app_unit_id">ca-app-pub-6203113524040199/6223574137</string>

</resources>