<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="0dp"
        android:gravity="clip_vertical"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/btn_close_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_100"
            android:contentDescription="@string/close" />
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/appbar_register"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/normal_100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_data"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/normal_150"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                android:layout_marginTop="@dimen/small_100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/nama"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:paddingBottom="16dp"
                    android:textSize="@dimen/subtitle_1"
                    android:paddingEnd="16dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                android:layout_marginTop="@dimen/normal_100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUmur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/umur"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:paddingBottom="16dp"
                    android:textSize="@dimen/subtitle_1"
                    android:paddingEnd="16dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                android:layout_marginTop="@dimen/normal_100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTempatDiutus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/tempat_diutus"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:paddingBottom="16dp"
                    android:textSize="@dimen/subtitle_1"
                    android:paddingEnd="16dp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                android:layout_marginTop="@dimen/normal_100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextKisah"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/kisah"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:paddingBottom="16dp"
                    android:textSize="@dimen/subtitle_1"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:gravity="top|start"
                    android:paddingEnd="16dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="170dp">
                <Button
                    android:id="@+id/uploadImageProfile"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/bg_btn_primary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/uploadImageDisplay"
                    android:text="@string/profile"
                    android:layout_width="150dp"
                    android:layout_height="50dp"/>
                <ImageView
                    android:id="@+id/profileView"
                    app:layout_constraintTop_toBottomOf="@id/uploadImageProfile"
                    app:layout_constraintStart_toStartOf="@id/uploadImageProfile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/uploadImageProfile"
                    android:layout_width="120dp"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_baseline_image_24"
                    android:layout_height="120dp"/>
                <Button
                    android:id="@+id/uploadImageDisplay"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/bg_btn_primary"
                    app:layout_constraintStart_toEndOf="@id/uploadImageProfile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/uploadImageProfile"
                    android:text="@string/upload_display"
                    android:layout_width="150dp"
                    android:layout_height="50dp"/>
                <ImageView
                    android:id="@+id/displayView"
                    app:layout_constraintTop_toBottomOf="@id/uploadImageDisplay"
                    app:layout_constraintStart_toStartOf="@id/uploadImageDisplay"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/uploadImageDisplay"
                    android:layout_width="120dp"
                    android:contentDescription="@string/upload_display"
                    android:src="@drawable/ic_baseline_image_24"
                    android:layout_height="120dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/upload"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn_primary"
                android:layout_marginTop="24dp"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>